kubernetes/vader/cluster-addons/traefik-extra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik

  ports:
    - name: traefik
      port: 9000
      targetPort: 9000
